[gd_scene load_steps=8 format=3 uid="uid://cebxidrtrrui5"]

[ext_resource type="Script" path="res://obstacle.gd" id="1_3hrgu"]
[ext_resource type="Material" uid="uid://8hnmxay80t7h" path="res://art/obstacle_material.tres" id="1_onw6w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_021ul"]
size = Vector3(3, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_um5dk"]
size = Vector3(3, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bwwmc"]
size = Vector3(10, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_k7x70"]
size = Vector3(10, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_6mv35"]
size = Vector3(3, 8, 1)

[node name="Obstacle" type="Node3D" groups=["Obstacle"]]
script = ExtResource("1_3hrgu")

[node name="Pillar1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar1"]
shape = SubResource("BoxShape3D_021ul")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillar1"]
material_override = ExtResource("1_onw6w")
mesh = SubResource("BoxMesh_um5dk")

[node name="Pillar2" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar2"]
shape = SubResource("BoxShape3D_bwwmc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillar2"]
material_override = ExtResource("1_onw6w")
mesh = SubResource("BoxMesh_k7x70")

[node name="Pillar3" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar3"]
shape = SubResource("BoxShape3D_bwwmc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillar3"]
material_override = ExtResource("1_onw6w")
mesh = SubResource("BoxMesh_k7x70")

[node name="Pillar4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar4"]
shape = SubResource("BoxShape3D_021ul")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pillar4"]
material_override = ExtResource("1_onw6w")
mesh = SubResource("BoxMesh_um5dk")

[node name="Trigger" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Trigger"]
shape = SubResource("BoxShape3D_6mv35")

[connection signal="body_entered" from="Pillar1" to="." method="_on_pillar_body_entered"]
[connection signal="body_entered" from="Pillar1" to="." method="_on_pillar_1_body_entered"]
[connection signal="body_exited" from="Pillar1" to="." method="_on_pillar_body_exited"]
[connection signal="body_entered" from="Pillar2" to="." method="_on_pillar_body_entered"]
[connection signal="body_exited" from="Pillar2" to="." method="_on_pillar_body_exited"]
[connection signal="body_entered" from="Pillar3" to="." method="_on_pillar_body_entered"]
[connection signal="body_exited" from="Pillar3" to="." method="_on_pillar_body_exited"]
[connection signal="body_entered" from="Pillar4" to="." method="_on_pillar_body_entered"]
[connection signal="body_exited" from="Pillar4" to="." method="_on_pillar_body_exited"]
[connection signal="body_exited" from="Trigger" to="." method="_on_trigger_body_exited"]
